fixed alignment of icons on resize for navbar and footer

--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 .app-container {
-  /*height: 100vh;*/
+  height: 100vh;
   /*width: 100vw;*/
   background-color: transparent;
   font-family: 'NTR', sans-serif;
@@ -13,8 +13,13 @@
   background-size: contain;
   background-repeat: no-repeat;*/
   max-width:100%;
-  /*max-height:100%;*/
+  /*max-height: 100vh;*/
+  /*height: 300px;*/
   vertical-align: middle;
+}
+
+.centerfold.death-bg {
+  height: 400px;
 }
 .dark-main {
   height: 100vh;
